--- a/ANAStream/Info.plist
+++ b/ANAStream/Info.plist
@@ -43,5 +43,25 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb211139755932883</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>211139755932883</string>
+    <key>FacebookDisplayName</key>
+    <string>VVV Test App</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
